--- a/src/style/components/_vimeoPlayer.scss
+++ b/src/style/components/_vimeoPlayer.scss
@@ -9,6 +9,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    pointer-events: none;
+    // testing Iphone Issue
+    // pointer-events: none;
+    width: 100%;
   }
 }
